renamed classes by BEM

--- a/index.html
+++ b/index.html
@@ -144,21 +144,21 @@
                    <a class="logo" href="#"><span class="logo-decor-text">Web</span>Studio</a>
                     <div class="navigation">
                        <ul class="nav-ul">        
-                           <li><a href="#" class="navigation-el">Cтудія</a></li>
-                           <li><a href="#" class="navigation-el">Портфоліо</a></li>
-                           <li><a href="#" class="navigation-el">Контакти</a></li>
+                           <li><a href="#" class="nav-ul_el">Cтудія</a></li>
+                           <li><a href="#" class="nav-ul_el">Портфоліо</a></li>
+                           <li><a href="#" class="nav-ul_el">Контакти</a></li>
                        </ul>
                        <ul class="header-address">
                            <li>
                                <svg class="address-svg" width="16" height="12">
                                    <use href="#icon-envelope"></use>
                                </svg>
-                               <a href="email:info@devstudio.com" class="address-el">info@devstudio.com </a></li>
+                               <a href="email:info@devstudio.com" class="address_el">info@devstudio.com </a></li>
                            <li>
                                <svg class="address-svg" width="10" height="16">
                                    <use href="#icon-smartphone"></use>
                                </svg>
-                               <a href="tel:+380-096-111-11-11" class="address-el"> +38 096 111 11 11</a></li>
+                               <a href="tel:+380-096-111-11-11" class="address_el"> +38 096 111 11 11</a></li>
                        </ul>
                    </div>
          </header>
@@ -181,28 +181,28 @@
                                 <form class="modal-form">
                                     <label class="enter">
                                         Ім'я
-                                        <input class="modal-form-el" type="text" required>
+                                        <input class="modal-form_el" type="text" required>
                                         <svg class="modal-input-svg">
                                             <use href="#icon-form-person"></use>
                                         </svg> 
                                     </label>
                                     <label class="enter">
                                         Телефон
-                                        <input class="modal-form-el" type="tel" required>
+                                        <input class="modal-form_el" type="tel" required>
                                         <svg class="modal-input-svg">
                                             <use href="#icon-form-phone"></use>
                                         </svg>  
                                     </label>
                                     <label class="enter">
                                         Пошта
-                                        <input class="modal-form-el" type="email" required>
+                                        <input class="modal-form_el" type="email" required>
                                         <svg class="modal-input-svg">
                                             <use href="#icon-form-email"></use>
                                         </svg>  
                                     </label>
                                     <label class="enter">
                                         Коментар
-                                        <textarea class="modal-form-comment"  type="text" placeholder="Введіть текст"></textarea> 
+                                        <textarea class="modal-form_comment"  type="text" placeholder="Введіть текст"></textarea> 
                                     </label>
                                     <label class="checkbox">
                                         <input type="checkbox" required>
@@ -219,19 +219,19 @@
                 </section>
             <div class="container">
                 <ul class="features">
-                        <li class="features-li">
+                        <li class="features_li">
                             <h4>УВАГА ДО ДЕТАЛЕЙ</h4>
                             <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
                         </li>
-                        <li class="features-li">
+                        <li class="features_li">
                             <h4>ПУНКТУАЛЬНІСТЬ</h4>
                             <p>Завдання організації,особливо рамки і місце навчання кадрів тягне у себе.</p>
                     </li>
-                        <li class="features-li">
+                        <li class="features_li">
                             <h4>ПЛАНУВАННЯ</h4>
                             <p>Так само консультація з широким активом значною мірою зумовлює.</p>
                     </li>
-                        <li class="features-li">
+                        <li class="features_li">
                             <h4>СУЧАСНІ ТЕХНОЛОГІЇ</h4>
                             <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
                         </li>
@@ -241,17 +241,17 @@
                 <section class="activ-section">
                     <h2 class="main-h2">Чим ми займаємось</h2>
                     <ul class="activities">
-                        <li class="activities-li">
+                        <li class="activities_li">
                             <img src="./img/(0).jpg" alt="Frontend" height="294px">
-                            <div class="decorative-div"><p>ДЕСКТОПНІ ДОДАТКИ</p></div>
+                            <div class="activities_li-overlay"><p>ДЕСКТОПНІ ДОДАТКИ</p></div>
                         </li>
-                        <li class="activities-li">
+                        <li class="activities_li">
                             <img src="./img/(1).jpg" alt="Marketing" height="294px">
-                            <div class="decorative-div"><p>МОБІЛЬНІ ДОДАТКИ</p></div>
+                            <div class="activities_li-overlay"><p>МОБІЛЬНІ ДОДАТКИ</p></div>
                         </li>
-                        <li class="activities-li">
+                        <li class="activities_li">
                             <img src="./img/(2).jpg" alt="Design" height="294px">
-                            <div class="decorative-div"><p>ДИЗАЙНЕРЗЬКІ РІШЕННЯ</p></div>
+                            <div class="activities_li-overlay"><p>ДИЗАЙНЕРЗЬКІ РІШЕННЯ</p></div>
                         </li>
                     </ul>
                 </section>
@@ -268,19 +268,19 @@
                                 </div>
                                 <ul class="social-links">
                                     <li>
-                                        <svg class="social-links-el">
+                                        <svg class="social-links_el">
                                         <use href="./img/symbol-defs.svg#icon-instagram"></use>
                                     </svg></li>
                                     <li>
-                                        <svg class="social-links-el">
+                                        <svg class="social-links_el">
                                         <use href="./img/symbol-defs.svg#icon-twitter"></use>
                                     </svg></li>
                                     <li>
-                                        <svg class="social-links-el">
+                                        <svg class="social-links_el">
                                         <use href="./img/symbol-defs.svg#icon-facebook"></use>
                                     </svg></li>
                                     <li>
-                                        <svg class="social-links-el">
+                                        <svg class="social-links_el">
                                         <use href="./img/symbol-defs.svg#icon-linkedin"></use>
                                     </svg></li>
                                 </ul> 
@@ -293,16 +293,16 @@
                                 </div>
                                 <ul class="social-links">
                                     <li>
-                                        <svg class="social-links-el">
+                                        <svg class="social-links_el">
                                         <use href="./img/symbol-defs.svg#icon-instagram"></use>
                                     </svg></li>
-                                    <li><svg class="social-links-el">
+                                    <li><svg class="social-links_el">
                                         <use href="./img/symbol-defs.svg#icon-twitter"></use>
                                     </svg></li>
-                                    <li><svg class="social-links-el">
+                                    <li><svg class="social-links_el">
                                         <use href="./img/symbol-defs.svg#icon-facebook"></use>
                                     </svg></li>
-                                    <li><svg class="social-links-el">
+                                    <li><svg class="social-links_el">
                                         <use href="./img/symbol-defs.svg#icon-linkedin"></use>
                                     </svg></li>
                                 </ul> 
@@ -314,16 +314,16 @@
                                     <p>Marketing</p>
                                 </div>
                                 <ul class="social-links">
-                                    <li><svg class="social-links-el">
+                                    <li><svg class="social-links_el">
                                         <use href="./img/symbol-defs.svg#icon-instagram"></use>
                                     </svg></li>
-                                    <li><svg class="social-links-el">
+                                    <li><svg class="social-links_el">
                                         <use href="./img/symbol-defs.svg#icon-twitter"></use>
                                     </svg></li>
-                                    <li><svg class="social-links-el">
+                                    <li><svg class="social-links_el">
                                         <use href="./img/symbol-defs.svg#icon-facebook"></use>
                                     </svg></li>
-                                    <li><svg class="social-links-el">
+                                    <li><svg class="social-links_el">
                                         <use href="./img/symbol-defs.svg#icon-linkedin"></use>
                                     </svg></li>
                                 </ul> 
@@ -335,16 +335,16 @@
                                     <p>UI Designer</p>
                                 </div>
                                 <ul class="social-links">
-                                    <li><svg class="social-links-el">
+                                    <li><svg class="social-links_el">
                                         <use href="./img/symbol-defs.svg#icon-instagram"></use>
                                     </svg></li>
-                                    <li><svg class="social-links-el">
+                                    <li><svg class="social-links_el">
                                         <use href="./img/symbol-defs.svg#icon-twitter"></use>
                                     </svg></li>
-                                    <li><svg class="social-links-el">
+                                    <li><svg class="social-links_el">
                                         <use href="./img/symbol-defs.svg#icon-facebook"></use>
                                     </svg></li>
-                                    <li><svg class="social-links-el">
+                                    <li><svg class="social-links_el">
                                         <use href="./img/symbol-defs.svg#icon-linkedin"></use>
                                     </svg></li>
                                 </ul> 
@@ -355,33 +355,33 @@
         <div class="container">  
             <div class="customers">
                     <p>Постійні клієнти</p>
-                    <ul class="customers-ul">
-                        <li class="customers-li">
+                    <ul class="customers_ul">
+                        <li class="customers_li">
                             <svg class="customers-icons" width="41" height="46.7">
                              <use href="#icon-ya-co"></use>
                             </svg>
                         </li>
-                        <li class="customers-li">
+                        <li class="customers_li">
                             <svg class="customers-icons" width="40" height="52">
                                 <use href="#icon-company"></use>
                                </svg>
                         </li>
-                        <li class="customers-li">
+                        <li class="customers_li">
                             <svg class="customers-icons" width="44" height="42">
                                 <use href="#icon-company-1"></use>
                                </svg>
                         </li>
-                        <li class="customers-li">
+                        <li class="customers_li">
                             <svg class="customers-icons" width="84" height="41">
                                 <use href="#icon-foster"></use>
                                </svg>
                         </li>
-                        <li class="customers-li">
+                        <li class="customers_li">
                             <svg class="customers-icons" width="62" height="45">
                                 <use href="#icon-brand"></use>
                                </svg>
                         </li>
-                        <li class="customers-li">
+                        <li class="customers_li">
                             <svg class="customers-icons" width="84" height="41">
                                 <use href="#icon-company-2"></use>
                                </svg>
@@ -396,23 +396,23 @@
                     <a class="logo" href="#"><span class="logo-decor-text">Web</span>Studio</a>
                     <ul class="address">
                         <li><a>м. Київ, пр-т Лесі Українки, 26</a></li>
-                        <li><a class="address-el" href="tel:+380-096-111-11-11" >+38 096 111 11 11</a></li>
-                        <li><a class="address-el" href="email:info@devstudio.com">info@devstudio.com</a></li>
+                        <li><a class="address_el" href="tel:+380-096-111-11-11" >+38 096 111 11 11</a></li>
+                        <li><a class="address_el" href="email:info@devstudio.com">info@devstudio.com</a></li>
                     </ul>
                 </div>
                 <div class="footer-links">
                     <p>ПРИЄДНУЙТЕСЬ</p>
                     <ul class="social-links">
-                        <li><svg class="social-links-el">
+                        <li><svg class="social-links_el">
                             <use href="./img/symbol-defs.svg#icon-instagram"></use>
                         </svg></li>
-                        <li><svg class="social-links-el">
+                        <li><svg class="social-links_el">
                             <use href="./img/symbol-defs.svg#icon-twitter"></use>
                         </svg></li>
-                        <li><svg class="social-links-el">
+                        <li><svg class="social-links_el">
                             <use href="./img/symbol-defs.svg#icon-facebook"></use>
                         </svg></li>
-                        <li><svg class="social-links-el">
+                        <li><svg class="social-links_el">
                             <use href="./img/symbol-defs.svg#icon-linkedin"></use>
                         </svg></li>
                     </ul> 
