--- a/portfolio.html
+++ b/portfolio.html
@@ -28,27 +28,27 @@
     </svg>
     <header class="outline">
         <div class="container">  
-             <div class="header-items"> 
-                <a class="logo" href="#"><span class="decorative-web">Web</span>Studio</a>
-                 <div class="nav-ul">
-                    <ul class="navigation">        
-                        <li><a href="#" class="navigation-el">Cтудія</a></li>
-                        <li><a href="#" class="navigation-el">Портфоліо</a></li>
-                        <li><a href="#" class="navigation-el">Контакти</a></li>
-                    </ul>
-                    <ul class="header-address">
-                        <li>
-                            <svg class="address-svg" width="16" height="12">
-                                <use href="#icon-envelope"></use>
-                            </svg>
-                            <a href="email:info@devstudio.com" class="address-el">info@devstudio.com </a></li>
-                        <li>
-                            <svg class="address-svg" width="10" height="16">
-                                <use href="#icon-smartphone"></use>
-                            </svg>
-                            <a href="tel:+380-096-111-11-11" class="address-el"> +38 096 111 11 11</a></li>
-                    </ul>
-                </div>
+            <div class="header-items"> 
+               <a class="logo" href="#"><span class="logo-decor-text">Web</span>Studio</a>
+                <div class="navigation">
+                   <ul class="nav-ul">        
+                       <li><a href="#" class="nav-ul_el">Cтудія</a></li>
+                       <li><a href="#" class="nav-ul_el">Портфоліо</a></li>
+                       <li><a href="#" class="nav-ul_el">Контакти</a></li>
+                   </ul>
+                   <ul class="header-address">
+                       <li>
+                           <svg class="address-svg" width="16" height="12">
+                               <use href="#icon-envelope"></use>
+                           </svg>
+                           <a href="email:info@devstudio.com" class="address_el">info@devstudio.com </a></li>
+                       <li>
+                           <svg class="address-svg" width="10" height="16">
+                               <use href="#icon-smartphone"></use>
+                           </svg>
+                           <a href="tel:+380-096-111-11-11" class="address_el"> +38 096 111 11 11</a></li>
+                   </ul>
+               </div>
      </header>
      <main>
         <div class="container">
@@ -139,26 +139,26 @@
     <footer>
         <div class="container">
             <div>
-                <a class="logo" href="#"><span class="decorative-web">Web</span>Studio</a>
+                <a class="logo" href="#"><span class="logo-decor-text">Web</span>Studio</a>
                 <ul class="address">
                     <li><a>м. Київ, пр-т Лесі Українки, 26</a></li>
-                    <li><a class="navigation-el" href="tel:+380-096-111-11-11" >+38 096 111 11 11</a></li>
-                    <li><a class="navigation-el" href="email:info@devstudio.com">info@devstudio.com</a></li>
+                    <li><a class="address_el" href="tel:+380-096-111-11-11" >+38 096 111 11 11</a></li>
+                    <li><a class="address_el" href="email:info@devstudio.com">info@devstudio.com</a></li>
                 </ul>
             </div>
             <div class="footer-links">
                 <p>ПРИЄДНУЙТЕСЬ</p>
                 <ul class="social-links">
-                    <li><svg class="social-links-el">
+                    <li><svg class="social-links_el">
                         <use href="./img/symbol-defs.svg#icon-instagram"></use>
                     </svg></li>
-                    <li><svg class="social-links-el">
+                    <li><svg class="social-links_el">
                         <use href="./img/symbol-defs.svg#icon-twitter"></use>
                     </svg></li>
-                    <li><svg class="social-links-el">
+                    <li><svg class="social-links_el">
                         <use href="./img/symbol-defs.svg#icon-facebook"></use>
                     </svg></li>
-                    <li><svg class="social-links-el">
+                    <li><svg class="social-links_el">
                         <use href="./img/symbol-defs.svg#icon-linkedin"></use>
                     </svg></li>
                 </ul> 
