--- a/index.html
+++ b/index.html
@@ -219,19 +219,19 @@
                 </section>
             <div class="container">
                 <ul class="features">
-                        <li class="features_li">
+                        <li class="features_li features_li-antenna">
                             <h4>УВАГА ДО ДЕТАЛЕЙ</h4>
                             <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
                         </li>
-                        <li class="features_li">
+                        <li class="features_li features_li-astronaut">
                             <h4>ПУНКТУАЛЬНІСТЬ</h4>
                             <p>Завдання організації,особливо рамки і місце навчання кадрів тягне у себе.</p>
                     </li>
-                        <li class="features_li">
+                        <li class="features_li features_li-clock">
                             <h4>ПЛАНУВАННЯ</h4>
                             <p>Так само консультація з широким активом значною мірою зумовлює.</p>
                     </li>
-                        <li class="features_li">
+                        <li class="features_li features_li-diagram">
                             <h4>СУЧАСНІ ТЕХНОЛОГІЇ</h4>
                             <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
                         </li>
