--- a/portfolio.html
+++ b/portfolio.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
-<html lang="uk">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport">
-    <link href="https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./css/style.min.css">
-    <title>Портфоліо</title>
-</head>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>WebStudio</title>
+        <meta name="keywords" content="">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.css">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap">
+        <link rel="stylesheet" href="./css/style.min.css">
+    </head>
 <body>
     <svg aria-hidden="true" style="position: absolute; width: 0; height: 0; overflow: hidden;" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
         <defs>
@@ -138,12 +139,12 @@
     </main>
     <footer>
         <div class="container">
-            <div>
+            <div class="footer-address">
                 <a class="logo" href="#"><span class="logo-decor-text">Web</span>Studio</a>
                 <ul class="address">
                     <li><a>м. Київ, пр-т Лесі Українки, 26</a></li>
-                    <li><a class="address_el" href="tel:+380-096-111-11-11" >+38 096 111 11 11</a></li>
-                    <li><a class="address_el" href="email:info@devstudio.com">info@devstudio.com</a></li>
+                    <li><a class="address_el footer-address_el" href="tel:+380-096-111-11-11" >+38 096 111 11 11</a></li>
+                    <li><a class="address_el footer-address_el" href="email:info@devstudio.com">info@devstudio.com</a></li>
                 </ul>
             </div>
             <div class="footer-links">
@@ -167,10 +168,11 @@
                 <p>Підпишіться на розсилку</p>
                 <form class="footer-form">
                     <input class="footer-input" type="email" placeholder="E-mail" required>
-                    <button class="footer-submit" type="submit">Підписатися</button>
+                    <button class="footer-submit" type="submit">Підписатися
                         <svg class="send-svg" width="24" height="24">
                             <use href="#icon-icon-send"></use>
                         </svg>
+                    </button>
                 </form>
             </div>
         </div>
