--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html lang="uk">
+<html lang="en">
     <head>
-        <title>WebStudio</title>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>WebStudio</title>
         <meta name="keywords" content="">
-        <link href="https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.css" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.css">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap">
         <link rel="stylesheet" href="./css/style.min.css">
     </head>
     <body>
@@ -161,6 +162,8 @@
                                <a href="tel:+380-096-111-11-11" class="address_el"> +38 096 111 11 11</a></li>
                        </ul>
                    </div>
+                </div>
+            </div>
          </header>
          <main>
                 <section class="hero">
@@ -239,18 +242,18 @@
             </div>
             <div class="container">
                 <section class="activ-section">
-                    <h2 class="main-h2">Чим ми займаємось</h2>
+                    <h2 class="main-h2 main-h2_adaptive">Чим ми займаємось</h2>
                     <ul class="activities">
                         <li class="activities_li">
-                            <img src="./img/(0).jpg" alt="Frontend" height="294px">
+                            <img src="./img/(0).jpg" alt="Frontend" height="294">
                             <div class="activities_li-overlay"><p>ДЕСКТОПНІ ДОДАТКИ</p></div>
                         </li>
                         <li class="activities_li">
-                            <img src="./img/(1).jpg" alt="Marketing" height="294px">
+                            <img src="./img/(1).jpg" alt="Marketing" height="294">
                             <div class="activities_li-overlay"><p>МОБІЛЬНІ ДОДАТКИ</p></div>
                         </li>
                         <li class="activities_li">
-                            <img src="./img/(2).jpg" alt="Design" height="294px">
+                            <img src="./img/(2).jpg" alt="Design" height="294">
                             <div class="activities_li-overlay"><p>ДИЗАЙНЕРЗЬКІ РІШЕННЯ</p></div>
                         </li>
                     </ul>
@@ -261,93 +264,94 @@
                     <h2 class="main-h2">Наша команда</h2>
                     <ul class="team-container">
                             <li class="team-members">
-                                <img src="./img/igor.jpg" alt="Ігор Дем'яненко" height="260px">
+                                <img src="./img/igor.jpg" alt="Ігор Дем'яненко" height="460" width="450">
                                 <div class="team-info">
                                     <h5>Ігор Дем'яненко</h5>
                                     <p>Product Designer</p>
+                                
+                                    <ul class="social-links">
+                                        <li>
+                                            <svg class="social-links_el">
+                                            <use href="./img/symbol-defs.svg#icon-instagram"></use>
+                                        </svg></li>
+                                        <li>
+                                            <svg class="social-links_el">
+                                            <use href="./img/symbol-defs.svg#icon-twitter"></use>
+                                        </svg></li>
+                                        <li>
+                                            <svg class="social-links_el">
+                                            <use href="./img/symbol-defs.svg#icon-facebook"></use>
+                                        </svg></li>
+                                        <li>
+                                            <svg class="social-links_el">
+                                            <use href="./img/symbol-defs.svg#icon-linkedin"></use>
+                                        </svg></li>
+                                    </ul> 
                                 </div>
-                                <ul class="social-links">
-                                    <li>
-                                        <svg class="social-links_el">
-                                        <use href="./img/symbol-defs.svg#icon-instagram"></use>
-                                    </svg></li>
-                                    <li>
-                                        <svg class="social-links_el">
-                                        <use href="./img/symbol-defs.svg#icon-twitter"></use>
-                                    </svg></li>
-                                    <li>
-                                        <svg class="social-links_el">
-                                        <use href="./img/symbol-defs.svg#icon-facebook"></use>
-                                    </svg></li>
-                                    <li>
-                                        <svg class="social-links_el">
-                                        <use href="./img/symbol-defs.svg#icon-linkedin"></use>
-                                    </svg></li>
-                                </ul> 
                             </li>
                             <li class="team-members">
-                                <img src="./img/olga.jpg" alt="Ольга Рєпіна" height="260px">
+                                <img src="./img/olga.jpg" alt="Ольга Рєпіна" height="460" width="450">
                                 <div class="team-info">
                                     <h5>Ольга Рєпіна</h5>
                                     <p>Frontend Developer</p>
-                                </div>
-                                <ul class="social-links">
-                                    <li>
-                                        <svg class="social-links_el">
-                                        <use href="./img/symbol-defs.svg#icon-instagram"></use>
-                                    </svg></li>
-                                    <li><svg class="social-links_el">
-                                        <use href="./img/symbol-defs.svg#icon-twitter"></use>
-                                    </svg></li>
-                                    <li><svg class="social-links_el">
-                                        <use href="./img/symbol-defs.svg#icon-facebook"></use>
-                                    </svg></li>
-                                    <li><svg class="social-links_el">
-                                        <use href="./img/symbol-defs.svg#icon-linkedin"></use>
-                                    </svg></li>
-                                </ul> 
+                                    <ul class="social-links">
+                                        <li>
+                                            <svg class="social-links_el">
+                                            <use href="./img/symbol-defs.svg#icon-instagram"></use>
+                                        </svg></li>
+                                        <li><svg class="social-links_el">
+                                            <use href="./img/symbol-defs.svg#icon-twitter"></use>
+                                        </svg></li>
+                                        <li><svg class="social-links_el">
+                                            <use href="./img/symbol-defs.svg#icon-facebook"></use>
+                                        </svg></li>
+                                        <li><svg class="social-links_el">
+                                            <use href="./img/symbol-defs.svg#icon-linkedin"></use>
+                                        </svg></li>
+                                    </ul>
+                                </div> 
                             </li>
                             <li class="team-members">
-                                <img src="./img/mykola.jpg" alt="Микола Тарасов" height="260px">
+                                <img src="./img/mykola.jpg" alt="Микола Тарасов" height="460" width="450">
                                 <div class="team-info">
                                     <h5>Микола Тарасов</h5>
                                     <p>Marketing</p>
+                                    <ul class="social-links">
+                                        <li><svg class="social-links_el">
+                                            <use href="./img/symbol-defs.svg#icon-instagram"></use>
+                                        </svg></li>
+                                        <li><svg class="social-links_el">
+                                            <use href="./img/symbol-defs.svg#icon-twitter"></use>
+                                        </svg></li>
+                                        <li><svg class="social-links_el">
+                                            <use href="./img/symbol-defs.svg#icon-facebook"></use>
+                                        </svg></li>
+                                        <li><svg class="social-links_el">
+                                            <use href="./img/symbol-defs.svg#icon-linkedin"></use>
+                                        </svg></li>
+                                    </ul> 
                                 </div>
-                                <ul class="social-links">
-                                    <li><svg class="social-links_el">
-                                        <use href="./img/symbol-defs.svg#icon-instagram"></use>
-                                    </svg></li>
-                                    <li><svg class="social-links_el">
-                                        <use href="./img/symbol-defs.svg#icon-twitter"></use>
-                                    </svg></li>
-                                    <li><svg class="social-links_el">
-                                        <use href="./img/symbol-defs.svg#icon-facebook"></use>
-                                    </svg></li>
-                                    <li><svg class="social-links_el">
-                                        <use href="./img/symbol-defs.svg#icon-linkedin"></use>
-                                    </svg></li>
-                                </ul> 
                             </li>
                             <li  class="team-members">
-                                <img src="./img/michael.jpg" alt="Михайло Єрмаков" height="260px">
+                                <img src="./img/michael.jpg" alt="Михайло Єрмаков" height="460" width="450">
                                 <div class="team-info">
                                     <h5>Михайло Єрмаков</h5>
                                     <p>UI Designer</p>
+                                    <ul class="social-links">
+                                        <li><svg class="social-links_el">
+                                            <use href="./img/symbol-defs.svg#icon-instagram"></use>
+                                        </svg></li>
+                                        <li><svg class="social-links_el">
+                                            <use href="./img/symbol-defs.svg#icon-twitter"></use>
+                                        </svg></li>
+                                        <li><svg class="social-links_el">
+                                            <use href="./img/symbol-defs.svg#icon-facebook"></use>
+                                        </svg></li>
+                                        <li><svg class="social-links_el">
+                                            <use href="./img/symbol-defs.svg#icon-linkedin"></use>
+                                        </svg></li>
+                                    </ul> 
                                 </div>
-                                <ul class="social-links">
-                                    <li><svg class="social-links_el">
-                                        <use href="./img/symbol-defs.svg#icon-instagram"></use>
-                                    </svg></li>
-                                    <li><svg class="social-links_el">
-                                        <use href="./img/symbol-defs.svg#icon-twitter"></use>
-                                    </svg></li>
-                                    <li><svg class="social-links_el">
-                                        <use href="./img/symbol-defs.svg#icon-facebook"></use>
-                                    </svg></li>
-                                    <li><svg class="social-links_el">
-                                        <use href="./img/symbol-defs.svg#icon-linkedin"></use>
-                                    </svg></li>
-                                </ul> 
                             </li>
                     </ul>
             </div>
@@ -392,12 +396,12 @@
         </main>
         <footer>
             <div class="container">
-                <div>
+                <div class="footer-address">
                     <a class="logo" href="#"><span class="logo-decor-text">Web</span>Studio</a>
                     <ul class="address">
                         <li><a>м. Київ, пр-т Лесі Українки, 26</a></li>
-                        <li><a class="address_el" href="tel:+380-096-111-11-11" >+38 096 111 11 11</a></li>
-                        <li><a class="address_el" href="email:info@devstudio.com">info@devstudio.com</a></li>
+                        <li><a class="address_el footer-address_el" href="tel:+380-096-111-11-11" >+38 096 111 11 11</a></li>
+                        <li><a class="address_el footer-address_el" href="email:info@devstudio.com">info@devstudio.com</a></li>
                     </ul>
                 </div>
                 <div class="footer-links">
@@ -421,10 +425,11 @@
                     <p>Підпишіться на розсилку</p>
                     <form class="footer-form">
                         <input class="footer-input" type="email" placeholder="E-mail" required>
-                        <button class="footer-submit" type="submit">Підписатися</button>
+                        <button class="footer-submit" type="submit">Підписатися
                             <svg class="send-svg" width="24" height="24">
                                 <use href="#icon-icon-send"></use>
                             </svg>
+                        </button>
                     </form>
                 </div>
             </div>
