--- a/index.html
+++ b/index.html
@@ -143,6 +143,25 @@
             <div class="container">  
                 <div class="header-items"> 
                    <a class="logo" href="#"><span class="logo-decor-text">Web</span>Studio</a>
+                   <button
+                   class="menu-toggle js-open-menu"
+                   aria-expanded="false"
+                   aria-controls="mobile-menu"
+                 >
+                   <svg
+                     width="24"
+                     height="24"
+                     fill="currentColor"
+                     viewBox="0 0 20 20"
+                     xmlns="http://www.w3.org/2000/svg"
+                   >
+                     <path
+                       fill-rule="evenodd"
+                       d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z"
+                       clip-rule="evenodd"
+                     ></path>
+                   </svg>
+                 </button>
                     <div class="navigation">
                        <ul class="nav-ul">        
                            <li><a href="#" class="nav-ul_el">Cтудія</a></li>
@@ -268,24 +287,27 @@
                                 <div class="team-info">
                                     <h5>Ігор Дем'яненко</h5>
                                     <p>Product Designer</p>
-                                
                                     <ul class="social-links">
                                         <li>
                                             <svg class="social-links_el">
-                                            <use href="./img/symbol-defs.svg#icon-instagram"></use>
-                                        </svg></li>
+                                                <use href="./img/symbol-defs.svg#icon-instagram"></use>
+                                            </svg>
+                                        </li>
                                         <li>
                                             <svg class="social-links_el">
-                                            <use href="./img/symbol-defs.svg#icon-twitter"></use>
-                                        </svg></li>
+                                                <use href="./img/symbol-defs.svg#icon-twitter"></use>
+                                            </svg>
+                                        </li>
                                         <li>
                                             <svg class="social-links_el">
-                                            <use href="./img/symbol-defs.svg#icon-facebook"></use>
-                                        </svg></li>
+                                                <use href="./img/symbol-defs.svg#icon-facebook"></use>
+                                            </svg>
+                                        </li>
                                         <li>
                                             <svg class="social-links_el">
-                                            <use href="./img/symbol-defs.svg#icon-linkedin"></use>
-                                        </svg></li>
+                                                <use href="./img/symbol-defs.svg#icon-linkedin"></use>
+                                            </svg>
+                                        </li>
                                     </ul> 
                                 </div>
                             </li>
@@ -297,17 +319,21 @@
                                     <ul class="social-links">
                                         <li>
                                             <svg class="social-links_el">
-                                            <use href="./img/symbol-defs.svg#icon-instagram"></use>
-                                        </svg></li>
+                                                <use href="./img/symbol-defs.svg#icon-instagram"></use>
+                                            </svg>
+                                        </li>
                                         <li><svg class="social-links_el">
-                                            <use href="./img/symbol-defs.svg#icon-twitter"></use>
-                                        </svg></li>
+                                                <use href="./img/symbol-defs.svg#icon-twitter"></use>
+                                            </svg>
+                                        </li>
                                         <li><svg class="social-links_el">
-                                            <use href="./img/symbol-defs.svg#icon-facebook"></use>
-                                        </svg></li>
+                                                <use href="./img/symbol-defs.svg#icon-facebook"></use>
+                                            </svg>
+                                        </li>
                                         <li><svg class="social-links_el">
-                                            <use href="./img/symbol-defs.svg#icon-linkedin"></use>
-                                        </svg></li>
+                                                <use href="./img/symbol-defs.svg#icon-linkedin"></use>
+                                            </svg>
+                                        </li>
                                     </ul>
                                 </div> 
                             </li>
@@ -318,17 +344,21 @@
                                     <p>Marketing</p>
                                     <ul class="social-links">
                                         <li><svg class="social-links_el">
-                                            <use href="./img/symbol-defs.svg#icon-instagram"></use>
-                                        </svg></li>
+                                                <use href="./img/symbol-defs.svg#icon-instagram"></use>
+                                            </svg>
+                                        </li>
                                         <li><svg class="social-links_el">
-                                            <use href="./img/symbol-defs.svg#icon-twitter"></use>
-                                        </svg></li>
+                                                <use href="./img/symbol-defs.svg#icon-twitter"></use>
+                                            </svg>
+                                        </li>
                                         <li><svg class="social-links_el">
-                                            <use href="./img/symbol-defs.svg#icon-facebook"></use>
-                                        </svg></li>
+                                                <use href="./img/symbol-defs.svg#icon-facebook"></use>
+                                            </svg>
+                                        </li>
                                         <li><svg class="social-links_el">
-                                            <use href="./img/symbol-defs.svg#icon-linkedin"></use>
-                                        </svg></li>
+                                                <use href="./img/symbol-defs.svg#icon-linkedin"></use>
+                                            </svg>
+                                        </li>
                                     </ul> 
                                 </div>
                             </li>
@@ -339,17 +369,21 @@
                                     <p>UI Designer</p>
                                     <ul class="social-links">
                                         <li><svg class="social-links_el">
-                                            <use href="./img/symbol-defs.svg#icon-instagram"></use>
-                                        </svg></li>
+                                                <use href="./img/symbol-defs.svg#icon-instagram"></use>
+                                            </svg>
+                                        </li>
                                         <li><svg class="social-links_el">
-                                            <use href="./img/symbol-defs.svg#icon-twitter"></use>
-                                        </svg></li>
+                                                <use href="./img/symbol-defs.svg#icon-twitter"></use>
+                                            </svg>
+                                        </li>
                                         <li><svg class="social-links_el">
-                                            <use href="./img/symbol-defs.svg#icon-facebook"></use>
-                                        </svg></li>
+                                                <use href="./img/symbol-defs.svg#icon-facebook"></use>
+                                            </svg>
+                                        </li>
                                         <li><svg class="social-links_el">
-                                            <use href="./img/symbol-defs.svg#icon-linkedin"></use>
-                                        </svg></li>
+                                                <use href="./img/symbol-defs.svg#icon-linkedin"></use>
+                                            </svg>
+                                        </li>
                                     </ul> 
                                 </div>
                             </li>
@@ -422,7 +456,7 @@
                     </ul> 
                 </div>
                 <div class="footer-sending">
-                    <p>Підпишіться на розсилку</p>
+                    <p>ПІДПИШІТЬСЯ НА РОЗСИЛКУ</p>
                     <form class="footer-form">
                         <input class="footer-input" type="email" placeholder="E-mail" required>
                         <button class="footer-submit" type="submit">Підписатися
@@ -434,6 +468,6 @@
                 </div>
             </div>
         </footer>
-        <script src="./modal.js"></script>
+        <script src="./js/modal.js"></script>
     </body>
 </html>
