--- a/portfolio.html
+++ b/portfolio.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>WebStudio</title>
+        <title>Portfolio</title>
         <meta name="keywords" content="">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap">
@@ -165,7 +165,7 @@
                 </ul> 
             </div>
             <div class="footer-sending">
-                <p>Підпишіться на розсилку</p>
+                <p>ПІДПИШІТЬСЯ НА РОЗСИЛКУ</p>
                 <form class="footer-form">
                     <input class="footer-input" type="email" placeholder="E-mail" required>
                     <button class="footer-submit" type="submit">Підписатися
